add styles to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,51 +51,51 @@
                 <button class="filter-button">Маркетинг</button>
             </li>            
         </ul>
-        <ul>
+        <ul class="portfolio">
             <li>
                 <img src="./images/portfolio1.jpg" alt="">
                 <h2 class="portfolio-work">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <p class="text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio2.jpg" alt="">
                 <h2 class="portfolio-work">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <p class="text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio3.jpg" alt="">
                 <h2 class="portfolio-work">Ресторан Seafood</h2>
-                <p>Додаток</p>
+                <p class="text">Додаток</p>
             </li>
             <li>
                 <img src="./images/portfolio4.jpg" alt="">
                 <h2 class="portfolio-work">Проєкт Prime</h2>
-                <p>Маркетинг</p>
+                <p class="text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio5.jpg" alt="">
                 <h2 class="portfolio-work">Проєкт Boxes</h2>
-                <p>Додаток</p>
+                <p class="text">Додаток</p>
             </li>
             <li>
                 <img src="./images/portfolio6.jpg" alt="">
                 <h2 class="portfolio-work">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <p class="text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio7.jpg" alt="">
                 <h2 class="portfolio-work">Видання Limited Edition</h2>
-                <p>Дизайн</p>
+                <p class="text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio8.jpg" alt="">
                 <h2 class="portfolio-work">Проєкт LAB</h2>
-                <p>Маркетинг</p>
+                <p class="text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio9.jpg" alt="">
                 <h2 class="portfolio-work">Growing Business</h2>
-                <p>Додаток</p>
+                <p class="text">Додаток</p>
             </li>
         </ul>
        </section>
