add visually hidden class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <section class="benefits">
             <!--Переваги-->
-            <h2 class="benefits-title">Переваги</h2>
+            <h2 class="visually-hidden">Переваги</h2>
             <ul>
                 <li>
                     <h3 class="title">Увага до деталей</h3>
