--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     <!--Головний контент-->
     <main>
        <section>
-        <h1>Наші роботи</h1>
+        <h1 class="visually-hidden">Наші роботи</h1>
         <ul>
             <li>
                 <button class="filter-button">Усі</button>
