--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
         <ul class="portfolio">
             <li>
                 <img src="./images/portfolio1.jpg" alt="">
-                <h2 class="portfolio-work">Технокряк</h2>
+                <h2 class="title">Технокряк</h2>
                 <p class="text">Веб-сайт</p>
             </li>
             <li>
